welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:23: error: ';' expected but 'else' found.
	} else { 
          ^SnakeBuggle:51: error: Unmatched closing brace '}' ignored here
}
^